<resources>
    <string name="app_name">MQTTGasAlert</string>
    <string name="adressebroker"> <b> Adresse du Broker</b></string>
    <string name="connectionName"> <b> Connection Name</b></string>
    <string name="port"> <b> Port</b></string>
    <string name="topic"> <b> Topic</b></string>
    <string name="seuil"> <b> Seuil</b></string>
    <string name="save"> <b> Save</b></string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>