<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">



    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
       >

        <EditText
            android:id="@+id/nameConnection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/connectionName"
            android:padding="16dp"
            android:textColor="@color/lavender" />
        <EditText
            android:id="@+id/adresseBroker"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/adressebroker"
            android:padding="16dp"
            android:textColor="@color/lavender" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/port"
            android:padding="16dp"
            android:textColor="@color/lavender"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/topic"
            android:padding="16dp"
            android:textColor="@color/lavender" />

        <EditText
            android:id="@+id/seuil"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/seuil"
            android:padding="16dp"
            android:textColor="@color/lavender"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/save"
            android:textSize="18sp"
            app:cornerRadius="20dp" />


    </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>